BuddyBot/src/Site.css
body {
    margin: auto;
    background-color: white;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

section{
    width: 75%;
    margin: auto;
}

h1 {
    font-size: 70px;
}

h2 {
    font-size: 36px;
}

a {
    background-image: linear-gradient(120deg, #17CE73 0%, #2079D2 100%);
    background-repeat: no-repeat;
    background-size: 100% 0.2em;
    background-position: 0 88%;
    transition: background-size 0.25s ease-in;
    text-decoration: none;
    font-weight: 500;
}

a:hover{
    background-size: 100% 88%;
}

a:visited {
    color: inherit;
}

footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 60%;
    background-color: white;
    color: #828181;
    text-align: center;
    padding: 0px 10px;
}

.flex-container {
    display: flex;
    justify-content: center;
    height: 100vh;
}

.wrapper-container {
    justify-content: center;
}

.webchat-wrapper {
    height: 80%;
    margin: 10% 15%;
}

.about-container {
    margin-top: 2.5%;
    padding: 10px 25px;
    width: 60%;
}

.webchat-container {
    width: 40%;
    background-color: #E5E9F0;
    box-shadow: inset 3px 0px 10px 1px #c5c2c2;
}

.bot-avatar {
    margin: auto;
    display: flex;
    width: 20%;
}

.main-title {
    margin: 0;
    text-align: center;
}

.sub-title {
    margin-top: 5px;
    font-weight: 400;
    text-align: center;
    color: #828181;
}

.article-text{
    font-size: 18px;
    text-align: justify;
}

.github-link {
    background-image: none;
    text-decoration: none;
}

.footer-link{
    background-image: none;
    text-decoration: none;
    
}

.footer-link:hover {
        font-weight: 500;
        color: #636262;
        border-bottom: 2px solid #828181;
}

.footer-link:visited {
        color: inherit;
}

.github-link img {
        height: 40px;
        width: 40px;
}

.footer-tagline{
    margin-top: 5px;
}


#webchat {
    border-radius: 20px;
    box-shadow: 1px 5px 8px 1px #cecece;
    background-color: white;
}


#webchat, #webchat > * {
        height: 100%;
        width: 100%;
}

